0.83.9
  - Added support for starting DOSBox-X in a specific
    display on a multi-screen setup (Windows builds as
    well as Linux/macOS SDL2 builds). A config option
    "display" is added to the [sdl] section that users
    can specify a display for the DOSBox-X window to
    start. The option can be combined with the existing
    "windowposition" config option to specify the
    position on the specified display/screen. (Wengier)
  - DOSBox-X will now pop up a message box to inform
    the user when a Direct3D pixel shader is loaded
    from the menu on the Windows platform. (Wengier)
  - Enhanced parallel1-3 config options in [parallel]
    section to allow the generated files to be started
    with the specified action: "openpcl" to start a
    program to open the file if the print output is
    detected to be PCL; "openps" to start a program if
    the print output is detected to be PostScript (PS);
    "openwith" to start a program otherwise. If you'd
    like to specify parameters then be sure to properly
    quote the string(s). Furthermore, if any of the
    specified program(s) cannot be executed, DOSBox-X
    will try to start a program as specified with the
    "openerror" action, or show an error. (Wengier)
  - Implemented file locking support for mounting disk
    image files so that you cannot mount the same disk
    image files in read/write mode at the same time as
    this can cause possible disk corruptions. A config
    option "locking disk image mount" is added to the
    [dosbox] section which when set to false (or if the
    user mounts the image files read-only) will bypass
    the locking of image files. (Wengier)
  - You can now use a single mapper file for both SDL1
    and SDL2 versions of DOSBox-X! The new mapper file
    will be divided to sections [SDL1] and [SDL2] for
    both versions. The mapper file can be specified
    with the mapperfile config option, or you can set
    the mapperfile_sdl1 and mapperfile_sdl2 config